--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,12 @@ upstream fastapi_upstream {
   # ip_hash;
   server fastapi:80;
 }
-
+#server
 server {
   location / {
       proxy_pass http://fastapi_upstream/;
   }
-  
+
   listen 80;
   server_name localhost;
 }
