--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./app:/app
     networks:
       - default
+    depends_on:
+      - mongodb
 
   nginx:
     image: nginx:stable-alpine
@@ -22,6 +24,27 @@ services:
       - default
     ports:
       - 80:80
+  
+  mongodb:
+    image: mongo
+    restart: unless-stopped
+    container_name: mongodbweb
+    env_file:
+      - .env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: $MONGO_USERNAME
+      MONGO_INITDB_ROOT_PASSWORD: $MONGO_PASSWORD
+      MONGO_INITDB_DATABASE: $MONGO_DATABASE
+    volumes:
+      - fastapidb:/data/db
+    ports:
+      - 27017:27017
+    networks:
+      - default
+
+  volumes:
+    fastapidb
+
 
     
 
