--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ fastapi==0.75.2
 Jinja2==3.1.1
 pydantic==1.9.0
 uvicorn==0.17.6
-starlette==3.5.0
-pymongo==4.1.1
+starlette
+psycopg2
+sqlalchemy
+
+# dev
+pytest
+requests
