--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASS=
-DATABASE_HOST=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=yourpasswordhere
+POSTGRES_SERVER=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=yourdbname
+SECRET_KEY=supersecretkeyhere!!
+USE_SQLITE_DB=True
