--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,9 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_PASSWORD: $DATABASE_PASS
-      POSTGRES_USER: $DATABASE_USER
-      POSTGRES_DB: $DATABASE_NAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_DB: $POSTGRES_DB
     ports:
       - "5455:5432"
 
