--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - 80:80
   
-  db:
+  postgres:
     image: postgres:12.4-alpine
     container_name: postgresfastapi
     env_file:
@@ -37,7 +37,7 @@ services:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_DB: $POSTGRES_DB
     ports:
-      - "5455:5432"
+      - "5432:5432"
 
   pgadmin:
     image: dpage/pgadmin4
