--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,22 +36,28 @@ services:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_DB: $POSTGRES_DB
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
+    volumes:
+      - ./initdb:/docker-entrypoint-initdb.d
+      - fastapiweb:/var/lib/postgresql/data/pgdata
+
 
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
+    restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: "example@example.com"
-      PGADMIN_DEFAULT_PASSWORD: "pgadmin1234"
+      PGADMIN_DEFAULT_EMAIL: "pgadmin4@pgadmin.org"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
     ports:
       - "15432:80"
     depends_on:
       - postgres
 
 volumes:
-  fastapiw:
+  fastapiweb:
     external: true
 
 
