--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
+DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/book_db
+
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=fastapi1
+POSTGRES_DB=fast_db
+POSTGRES_PASSWORD=password
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=fastapidb
+
 SECRET_KEY=supersecretkeyhere!!
 USE_SQLITE_DB=True
