--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,21 +27,20 @@ services:
     ports:
       - 80:80
   
-  postgres:
+  db:
     image: postgres:12.4-alpine
     container_name: postgresfastapi
+    restart: always
     env_file:
       - .env
     environment:
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_DB: $POSTGRES_DB
-      PGDATA: /var/lib/postgresql/data/pgdata
+      - POSTGRES_USER: POSTGRES_USER
+      - POSTGRES_PASSWORD: POSTGRES_PASSWORD
+      - POSTGRES_DB: POSTGRES_DB
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
-      - ./initdb:/docker-entrypoint-initdb.d
-      - fastapiweb:/var/lib/postgresql/data/pgdata
+      - fastapiweb:/var/lib/postgresql/data
 
 
   pgadmin:
@@ -49,13 +48,13 @@ services:
     container_name: pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: "pgadmin4@pgadmin.org"
-      PGADMIN_DEFAULT_PASSWORD: "admin"
+      - PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD: admin
     ports:
-      - "15432:80"
+      - 5050:80
     depends_on:
-      - postgres
-
+      - db
+    
 volumes:
   fastapiweb:
     external: true
