--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,9 @@ services:
     env_file:
       - .env
     environment:
-      - POSTGRES_USER: POSTGRES_USER
-      - POSTGRES_PASSWORD: POSTGRES_PASSWORD
-      - POSTGRES_DB: POSTGRES_DB
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
     ports:
       - 5432:5432
     volumes:
@@ -48,8 +48,8 @@ services:
     container_name: pgadmin
     restart: unless-stopped
     environment:
-      - PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
     ports:
       - 5050:80
     depends_on:
