--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/book_db
+DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/fast_db
 
 POSTGRES_USER=postgres
 POSTGRES_DB=fast_db
