--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   fastapi:
     build: .
-    command: "uvicorn main:app --host 0.0.0.0 --port 80 --reload"
+    command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 80 --reload"
     container_name: fastAPI
     env_file:
       - .env
