--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ POSTGRES_PASSWORD=password
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 
-SECRET_KEY=supersecretkeyhere!!
-USE_SQLITE_DB=True
+SECRET_KEY=django-insecure-vg*3mr@e=x0nv&^6fnzq6b+9dz_6141ubd-sjttn6gytaw*_kg
+
