--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,11 @@
-upstream fastapi_upstream {
+upstream django_upstream {
   # ip_hash;
-  server fastapi:80;
+  server django:80;
 }
 #server
 server {
   location / {
-      proxy_pass http://fastapi_upstream/;
+      proxy_pass http://django_upstream/;
   }
 
   listen 80;
