--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/fast_db
 POSTGRES_USER=postgres
 POSTGRES_DB=fast_db
 POSTGRES_PASSWORD=password
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 
 SECRET_KEY=django-insecure-vg*3mr@e=x0nv&^6fnzq6b+9dz_6141ubd-sjttn6gytaw*_kg
