--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/fast_db
+DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/
 
 POSTGRES_USER=postgres
-POSTGRES_DB=fast_db
+POSTGRES_NAME=postgres_db
 POSTGRES_PASSWORD=password
 POSTGRES_SERVER=db
 POSTGRES_PORT=5432
