--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./app:/app/
     ports:
-      - "3000:8000"
+      - "8000:8000"
     depends_on:
       - db
 
@@ -26,17 +26,11 @@ services:
 
   
   db:
-    image: postgres:12.4-alpine
+    image: postgres:13
     container_name: postgresdjango
-    restart: always
-    env_file:
-      - .env
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: $POSTGRES_DB
-    ports:
-      - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
     
