Secret key adicionada

--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@ POSTGRES_PASSWORD=password
 POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 
-SECRET_KEY=django-insecure-vg*3mr@e=x0nv&^6fnzq6b+9dz_6141ubd-sjttn6gytaw*_kg
+SECRET_KEY=3weotj3i4jgperorup^345gieudvou4593
+
+CSRF_SESSION_KEY=34ik827385948jh4tbojtenivnejfbiheb3t49f320or0i3u9j^^q3y28hc8un
 
