--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Django>=3.0,<4.0
-psycopg2-binary>=2.8
+autopep8==1.6.0
+Flask==2.1.1
 gunicorn==20.1.0
+psycopg2-binary>=2.8
+Flask-SQLAlchemy
+C
 python-dotenv
