env organizado e database url definido

--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
-DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/
+FLASK_ENV=development
+
+DATABASE_URL=postgresql://POSTGRES_USER:POSTGRES_PASSWORD@POSTGRES_SERVER:POSTGRES_PORT/POSTGRES_DB
 
 POSTGRES_USER=postgres
-POSTGRES_NAME=postgres
+POSTGRES_DB=flask_db
 POSTGRES_PASSWORD=password
-POSTGRES_SERVER=db
+POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
+
 
 SECRET_KEY=3weotj3i4jgperorup^345gieudvou4593
 
