--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,40 +2,44 @@ version: '3.8'
 
 services:
 
-  web:
+  flaskwb:
     build: .
-    container_name: flask
-    command: "gunicorn app.wsgi:application --bind 0.0.0.0:8000 --reload"
+    container_name: flaskweb
+    command: "gunicorn app:app --bind 0.0.0.0:8000 --reload"
+    restart: unless-stopped
     env_file:
       - .env
     volumes:
-      - ./src:/src/
-    ports:
-      - "8000:8000"
+      - ./src:/app
     depends_on:
       - db
 
   nginx:
     image: nginx:stable-alpine
-    container_name: nginx
+    container_name: nginxflask
     restart: unless-stopped
+    ports:
+      - "8000:8000"
     volumes:
       - ./nginx:/etc/nginx/conf.d
     depends_on:
-      - django
+      - flaskwb
 
   
   db:
     image: postgres:13
-    container_name: postgresdjango
+    container_name: postgresflask
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-flask:/var/lib/postgresql/data
     
 volumes:
-  postgres-data:
+  postgres-flask:
     external: true
 
 
