--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-autopep8==1.6.0
 Flask==2.1.1
+Flask-SQLAlchemy
+Flask-WTF
+Flask-migrate
+Flask-script
+
+autopep8==1.6.0
 gunicorn==20.1.0
 psycopg2-binary>=2.8
-Flask-SQLAlchemy
-C
 python-dotenv
+werkzeug
