database_url definido

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 FLASK_ENV=development
 
-DATABASE_URL=postgresql://POSTGRES_USER:POSTGRES_PASSWORD@POSTGRES_SERVER:POSTGRES_PORT/POSTGRES_DB
+DATABASE_URL=postgresql://postgres:password@localhost:5432/flask_db
 
 POSTGRES_USER=postgres
 POSTGRES_DB=flask_db
