--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 FLASK_ENV=development
 
-DATABASE_URL=postgresql://postgres:password@localhost:5432/flask_db
+DATABASE_URL=postgresql://postgres:password@db:5432/flask_db
 
 POSTGRES_USER=postgres
 POSTGRES_DB=flask_db
