.env ajustado apra django

--- a/.env
+++ b/.env
@@ -1,16 +1,10 @@
-FLASK_ENV=development
-FLASK_APP=app
-
-DATABASE_URL=postgresql://postgres:password@db:5432/flask_db
+DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/
 
 POSTGRES_USER=postgres
-POSTGRES_DB=flask_db
+POSTGRES_NAME=postgres
 POSTGRES_PASSWORD=password
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 
-
-SECRET_KEY=3weotj3i4jgperorup^345gieudvou4593
-
-CSRF_SESSION_KEY=34ik827385948jh4tbojtenivnejfbiheb3t49f320or0i3u9j^^q3y28hc8un
+SECRET_KEY=django-insecure-vg*3mr@e=x0nv&^6fnzq6b+9dz_6141ubd-sjttn6gytaw*_kg
 
