--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,50 +2,40 @@ version: '3.8'
 
 services:
 
-  flaskwb:
+  django:
     build: .
-    container_name: flaskweb
-    command: "gunicorn run:app --bind 0.0.0.0:8000 --reload"
-    restart: unless-stopped
+    container_name: webdjango
+    command: "gunicorn app.wsgi:application --bind 0.0.0.0:8000 --reload"
     env_file:
       - .env
     volumes:
-      - ./src:/app
+      - ./app:/app/
+    ports:
+      - "8000:8000"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
 
   nginx:
     image: nginx:stable-alpine
-    container_name: nginxflask
+    container_name: nginx
     restart: unless-stopped
-    ports:
-      - "8000:8000"
     volumes:
       - ./nginx:/etc/nginx/conf.d
     depends_on:
-      - flaskwb
+      - django
 
   
   db:
     image: postgres:13
-    container_name: postgresflask
-    env_file:
-      - .env
+    container_name: postgresdjango
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: $POSTGRES_DB
     volumes:
-      - postgres-flask:/var/lib/postgresql/data
-    healthcheck:
-      test: pg_isready -U $POSTGRES_USER
-      interval: 2s
-      timeout: 3s
-      retries: 40
+      - postgres-data:/var/lib/postgresql/data
     
 volumes:
-  postgres-flask:
+  postgres-data:
     external: true
 
 
