--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-Flask==2.1.1
-Flask-SQLAlchemy
-Flask-WTF
-Flask-migrate
-Flask-script
-
-autopep8==1.6.0
-gunicorn==20.1.0
+Django>=3.0,<4.0
 psycopg2-binary>=2.8
+gunicorn==20.1.0
 python-dotenv
-werkzeug
