ngninx do djnago

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,13 @@
-upstream flaskweb_upstream {
+upstream django_upstream {
   # ip_hash;
-  server flaskweb:8000;
+  server django:80;
 }
 #server
 server {
   location / {
-      proxy_pass http://flaskweb_upstream/;
+      proxy_pass http://django_upstream/;
   }
 
-  listen 8000;
+  listen 80;
   server_name localhost;
 }
