--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+#Django
 .env
-*/*/*__pycache__
-*/*/*/__pycache__
-.vscode
+*.log
+*.pot
+*.pyc
+__pycache__
+media
+
+#Backup files
+*.bak
+
+#
+
