ngninx configurado para ler staticfiles

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,11 @@ upstream django_upstream {
 }
 #server
 server {
+
+  location /static/{
+    autoindex on;
+    alias app/static/;
+  }
   location / {
       proxy_pass http://django_upstream/;
   }
