--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/
+DATABASE_URL=postgresql+psycopg2://postgres:password@postgres:5432/
 
 POSTGRES_USER=postgres
-POSTGRES_NAME=postgres
+POSTGRES_DB=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_SERVER=db
 POSTGRES_PORT=5432
