--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,14 @@ services:
   django:
     build: .
     container_name: webdjango
-    command: "gunicorn app.wsgi:application --bind 0.0.0.0:80 --reload"
+    command: sh -c "python manage.py collectstatic --no-input && python manage.py makemigrations && python manage.py migrate && gunicorn app.wsgi:application --bind 0.0.0.0:8000 --reload"
     env_file:
       - .env
     volumes:
       - ./app:/app
       - /app/static:/static
-   
+    expose:
+      - "8000"
     depends_on:
       - db
 
@@ -23,7 +24,7 @@ services:
       - ./nginx:/etc/nginx/conf.d
       - /app/static:/static
     ports:
-      - "80:80"
+      - "8000:8000"
     depends_on:
       - django
 
@@ -34,6 +35,7 @@ services:
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
     volumes:
       - postgres-data:/var/lib/postgresql/data
     
