--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,12 @@ services:
       - .env
     volumes:
       - ./app:/app
-      - /app/static:/static
+      - /static:/static
     expose:
       - "8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   nginx:
     image: nginx:stable-alpine
@@ -38,6 +39,11 @@ services:
       POSTGRES_DB: $POSTGRES_DB
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: pg_isready -U $POSTGRES_USER
+      interval: 2s
+      timeout: 3s
+      retries: 10
     
 volumes:
   postgres-data:
