--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,10 @@ server {
 
   location /static/{
     autoindex on;
-    alias app/static/;
+    alias /static/;
   }
   location / {
+      proxy_set_header Host $host;
       proxy_pass http://django_upstream/;
   }
 
