--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - .env
     volumes:
       - ./app:/app
-      - /static:/static
+      - /app/static:/static
     expose:
       - "8000"
     depends_on:
