--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,9 @@ services:
 
   django:
     build: .
-    container_name: webdjango
-    command: sh -c "python manage.py collectstatic --no-input && python manage.py makemigrations && python manage.py migrate && gunicorn app.wsgi:application --bind 0.0.0.0:8000 --reload"
+    container_name: web
+    restart: always
+    command: sh -c "python manage.py collectstatic --no-input && python manage.py makemigrations && python manage.py migrate && gunicorn app.wsgi:application -b 0.0.0.0:8000"
     env_file:
       - .env
     volumes:
@@ -22,6 +23,7 @@ services:
     container_name: nginx
     restart: unless-stopped
     volumes:
+      - ./app:/app
       - ./nginx:/etc/nginx/conf.d
       - /app/static:/static
     ports:
@@ -33,6 +35,9 @@ services:
   db:
     image: postgres:13
     container_name: postgresdjango
+    restart: always
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
