gitignore para django

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,16 @@ media
 #Backup files
 *.bak
 
-#
+#Python
+*.py[cod]
+*$py.class
+
+#Distribution/packaging
+.Python build/
+develop-eggs/
+dist/
+
+
 .deepsource.toml
 
 
