--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,17 @@ media
 .Python build/
 develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info
+.installed.cfg
 
 
 .deepsource.toml
