--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     container_name: web
     restart: always
-    command: sh -c "python manage.py collectstatic --no-input && gunicorn app.wsgi:application -b 0.0.0.0:8000"
+    command: sh -c "python manage.py collectstatic --no-input && python manage.py makemigrations && python manage.py migrate && gunicorn app.wsgi:application -b 0.0.0.0:8000"
     env_file:
       - .env
     volumes:
